tests/lustre/typechecking/shouldFail/cast_03.lus

node top(x: bool) returns (y: int8);
let
  y = (sint@<8> x);
tel
